Changelog
=========

2.1a1 - unreleased
------------------

* Adjusted the `mangleQuery` function to calculate extended path indexes from
  the Solr schema instead of hardcoding `path`. You need to provide indexers
  with the same three suffixes as we do ourselves in the `attributes` module
  for the `path` index and add those to the Solr schema.
  [hannosch]

* Changed the names of the indexes used to emulate the `path` index. You need
  to adjust your schema and rename `physicalPath` to `path_string`, 
  `physicalDepth` to `path_depth` and `parentPaths` to `path_parents`.
  [hannosch]

* Added documentation on Java process, monitoring production settings and
  include a number of useful munin plugin configurations.
  [hannosch]

* Updated example config to include production settings and JMX.
  [hannosch]

* Updated example config to collective.recipe.solrinstance 3.1 and Solr 3.2.
  [hannosch]

2.0 - 2011-06-04
----------------

* Updated readme and project description, adding detailed information about how
  Solr works and how we integrate with it.
  [hannosch]

2.0b2 - 2011-05-18
------------------

* Added optional support for the `Lazy` backports founds in catalogqueryplan.
  [hannosch]

* Fixed patch of LazyCat's `__add__` method to patch the base class instead, as
  the method was moved.
  [hannosch]

* Updated test config to Solr 3.1, which should be supported but hasn't seen
  extensive production use.
  [hannosch]

* Avoid using the deprecated `five:implements` directive.
  [hannosch]

2.0b1 - 2011-04-06
------------------

* Rewrite the `isSimpleSearch` function to use a less complex regular
  expression, which doesn't have O(2**n) scaling properties.
  [hannosch]

* Use the standard libraries doctest module.
  [hannosch]

* Fix the pretty_title_or_id method from PloneFlare; the implementation
  was broken, now delegates to the standard Plone implementation.
  [mj]


2.0a3 - 2011-01-26
------------------
